--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react-native-web": "^0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@angular/animations": "^12.2.2",
+    "@angular/cdk": "^12.2.2",
+    "@angular/material": "^12.2.2",
+    "@babel/core": "^7.9.0",
+    "rollup": "^1.32.1"
   },
   "private": true
 }
